<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green200"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".character_detail.CharacterDetailFragment">

    <ImageButton
        android:id="@+id/imageBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/circle"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uiLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBackButton">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@color/green300"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/rick_and_morty"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/textView1"
            app:layout_constraintTop_toTopOf="@id/textView1"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view_color50"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/alive"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/background_text_view_color50"
            android:textSize="20sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:layout_constraintStart_toEndOf="@id/textView2"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/species"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewSpecies"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/human"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/textView3"
            app:layout_constraintStart_toEndOf="@id/textView3"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view_color50"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/male"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toTopOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@id/textView4"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/origin"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewOrigin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/earth"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/textView5"
            app:layout_constraintStart_toEndOf="@id/textView5"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/background_recycler_view"
            tools:listitem="@layout/adapter_character_detail"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewOrigin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/error_message"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:gravity="center"
        android:background="@drawable/background_text_view"
        android:textSize="20sp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>