<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp"
    android:paddingTop="25dp"
    android:background="@drawable/back_ground_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uiLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewUrl"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/episode_1"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/the_ricklantis_mixup"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUrl"/>

        <TextView
            android:id="@+id/textViewAirDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/september_10_2017"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewName"/>

        <TextView
            android:id="@+id/textViewEpisode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/s03e07"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAirDate"/>

        <TextView
            android:id="@+id/textViewCreated"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/_2017_11_10t12_56_36_618z"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewEpisode"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/error_message"
        android:textColor="@color/green300"
        android:gravity="center"
        android:background="@drawable/background_text_view"
        android:textSize="20sp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>