<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
    android:id="@+id/imageBackButton"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_margin="30dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/circle"
    android:src="@drawable/baseline_arrow_back_24"
    android:scaleType="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uiLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBackButton">

        <TextView
            android:id="@+id/textViewNameUrl"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/episode_1"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:text="@string/the_ricklantis_mixup"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewNameUrl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewEpisode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:text="@string/s01e01"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewAirDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:text="@string/september_10_2017"
            android:textColor="@color/green300"
            android:gravity="center"
            android:background="@drawable/background_text_view"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewEpisode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/green100"
            tools:listitem="@layout/adapter_episode_detail"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            app:spanCount="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAirDate"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>